[gd_scene load_steps=7 format=3 uid="uid://ex61nh7f1bvo"]

[ext_resource type="Script" uid="uid://ba3ww6mjrj688" path="res://entities/enemies/Cactus/spike.gd" id="1_3jfro"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wctlq"]
albedo_color = Color(0.09019608, 1, 0.24705882, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_n1yli"]
material = SubResource("StandardMaterial3D_wctlq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kst87"]
albedo_color = Color(0.62967473, 0.62967473, 0.6296747, 1)
metallic = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_fi6n5"]
material = SubResource("StandardMaterial3D_kst87")
top_radius = 0.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_27ikh"]
height = 0.61972654
radius = 0.03

[node name="Spike" type="Area3D"]
script = ExtResource("1_3jfro")

[node name="Shaft" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.1855695e-09, 0.3, 0, -0.05, -1.3113417e-08, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("CylinderMesh_n1yli")

[node name="Tip" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.1855695e-09, 0.04, 0, -0.05, -1.7484555e-09, 0, 0, 0, 0.05, 0.33995065, 0, 0)
mesh = SubResource("CylinderMesh_fi6n5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, 0.0094490945, -1.7544319e-09, 0)
shape = SubResource("CylinderShape3D_27ikh")

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
